--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_SOCKET_URL = http://localhost:8080/
-# HTTPS=true
+REACT_APP_SOCKET_URL=https://project1-server-d223014d144a.herokuapp.com/
