--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yourusername.github.io/rock-paper-scissors",
+  "homepage": "https://coderknight02.github.io/rock-paper-scissors",
   "name": "rock-paper-scissors",
   "version": "0.1.0",
   "private": true,
